<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 Muhammed Ali Ammar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/general_pref_category_title"
        android:key="@string/general_pref_category_key"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="false"
        app:orderingFromXml="true"
        app:shouldDisableView="true">
        <Preference
            android:title="@string/text_size_pref_title"
            android:key="@string/text_size_pref_key"
            app:summary="@string/text_size_pref_summary"
            app:iconSpaceReserved="false"
            app:allowDividerBelow="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notification_pref_category_title"
        android:key="@string/notification_pref_category_key"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="false"
        app:orderingFromXml="true"
        app:shouldDisableView="true">
        <Preference
            android:title="@string/notification_pref_title"
            android:key="@string/notification_pref_key"
            app:summary="@string/notification_pref_summary"
            app:iconSpaceReserved="false"
            app:allowDividerBelow="false"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/data_pref_category_title"
        android:key="@string/data_pref_category_key"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:orderingFromXml="true"
        app:shouldDisableView="true">

        <CheckBoxPreference
            android:title="@string/background_syncing_title"
            android:defaultValue="@bool/background_syncing_default_value"
            android:key="@string/background_syncing_key"
            app:summary="@string/background_syncing_summary"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:title="@string/images_syncing_title"
            android:defaultValue="@bool/images_syncing_default_value"
            android:key="@string/images_syncing_key"
            app:summary="@string/images_syncing_summary"
            app:dependency="@string/background_syncing_key"
            app:allowDividerAbove="true"
            app:iconSpaceReserved="false"/>

        <ListPreference
            android:title="@string/sync_frequency_title"
            android:defaultValue="@string/sync_every_six_hours_value"
            android:key="@string/sync_frequency_key"
            android:entries="@array/sync_frequency_entries"
            android:entryValues="@array/sync_frequency_entries_values"
            app:dependency="@string/background_syncing_key"
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_pref_category_title"
        android:key="@string/about_pref_category_key"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="false"
        app:orderingFromXml="true"
        app:shouldDisableView="true">
    <Preference
        android:title="@string/about_pref_title"
        app:summary="@string/about_version_summary"
        app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>